--- a/ABD_cw3/ABD_cw3.csproj
+++ b/ABD_cw3/ABD_cw3.csproj
@@ -7,5 +7,7 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+    <Folder Include="Models\" />
+    <Folder Include="DAL\" />
   </ItemGroup>
 </Project>
