--- a/ABD_cw3/ABD_cw3.csproj
+++ b/ABD_cw3/ABD_cw3.csproj
@@ -12,6 +12,7 @@
     <Folder Include="DTOs\" />
     <Folder Include="DTOs\Requests\" />
     <Folder Include="DTOs\Responses\" />
+    <Folder Include="Services\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
