--- a/ABD_cw3/ABD_cw3.csproj
+++ b/ABD_cw3/ABD_cw3.csproj
@@ -13,6 +13,7 @@
     <Folder Include="DTOs\Requests\" />
     <Folder Include="DTOs\Responses\" />
     <Folder Include="Services\" />
+    <Folder Include="Middlewares\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
